<resources>
    <string name="ActualCurrency">all prices are expressed in</string>
    <string name="Ad">Click here, to get this free-ad APP</string>
    <string name="Ad2">Click here, to get the App special for sellers</string>
    <string name="Address">Address:</string>
    <string name="AlineacionCenter">Center</string>
    <string name="AlineacionLeft">Left</string>
    <string name="AlineacionRight">Right</string>
    <string name="AlineacionText">Text Alignment</string>
    <string name="Bill">Receipt #:</string>
    <string name="Bill_number"># receipt:</string>
    <string name="Bold">Bold</string>
    <string name="Bussines_name">Bussines Name:</string>
    <string name="Bussines_name2">Bussines Name:</string>
    <string name="ButResetInven">Reset inventory</string>
    <string name="ButtonAdd">Add</string>
    <string name="Client">Client:</string>
    <string name="ClientName">Customer Name:</string>
    <string name="ClientPhone">Phone Number:</string>
    <string name="Clients">Clients</string>
    <string name="Compatible">Compatible with any brand and model of thermal printer.</string>
    <string name="Currency">Currency</string>
    <string name="Draw">Draw Here</string>
    <string name="DrawPrint">Draw and print</string>
    <string name="FilterClient">If you want you can filter by client too</string>
    <string name="Generate">GENERATE</string>
    <string name="Height">Height</string>
    <string name="Home">HOME</string>
    <string name="Increase">Increase</string>
    <string name="Instruccion">You can personalize your receipt by clicking on the text that is in red and writing what you want, it is not necessary to fill everything only what is necessary for you.</string>
    <string name="InstructionsFragment">Instructions</string>
    <string name="Intructions">Go to settings and select printer, enter product data and press add. When you have all the products entered press print.</string>
    <string name="IntructionsQr">enter the information to generate the QR code</string>
    <string name="Inventory">Inventory</string>
    <string name="MyApps">Come to visit my other Apps !</string>
    <string name="MyProducts">My Products</string>
    <string name="NoCurrency">None..</string>
    <string name="NoData">There is no data to print</string>
    <string name="NoDataToSave">There is no data to save</string>
    <string name="Others">Others</string>
    <string name="OtrasFunciones">Other Functions</string>
    <string name="POS_printing">POS Receipt Printing</string>
    <string name="Persoadd">Personalize your receipts and set your printer</string>
    <string name="Persoadd1">Personalize</string>
    <string name="Persoadd2">Personalize your receipts and set your printer</string>
    <string name="Personalize">Personalize</string>
    <string name="Photos_printing">Photos Printing</string>
    <string name="Pop">Remember that the application requires to be connected to the internet for its operation. First you must add the thermal printer to your bluetooth devices from the main screen in connection settings. With this application you can easily check the operation of your bluetooth thermal printer printing free texts, printing a sample POS invoice and also printing your own invoices POS. Successes !. If you want to have a personalized application with these and many more functions, developed according to your needs write me. Whatsapp: +57 314 441 4766, Email: jeimssbtc@gmail.com</string>
    <string name="PressMyProducts">Press my products to add your own product list</string>
    <string name="Print">PRINT RECEIPT</string>
    <string name="PrintNameSaved">Printer Name Saved</string>
    <string name="PrintSizeSaved">Printer Size Saved</string>
    <string name="Probar">Bluetooth Thermal Printer</string>
    <string name="ProductCode">Product Code:</string>
    <string name="Product_name">Product Name:</string>
    <string name="QRCode_printing">QR Code Printing</string>
    <string name="Qty">Qty</string>
    <string name="Quantity">Quantity:</string>
    <string name="Refresh">2. Refresh Bluetooth list</string>
    <string name="ReportOn">Report</string>
    <string name="ReportOn2">Always have your daily sales report at hand</string>
    <string name="Reports">Reports</string>
    <string name="ResetInven">Do you want to set the inventory to 0?</string>
    <string name="RotarImage">Rotate Image:</string>
    <string name="SearchName">Search by name</string>
    <string name="Search_image">SEARH IMAGE</string>
    <string name="Select">Select...</string>
    <string name="SelectPRint">Select Printer...</string>
    <string name="SelectPRoCAnt">You must select a product and a quantity</string>
    <string name="SelectProduct">select a product...</string>
    <string name="Select_printer">Press to select printer</string>
    <string name="Settings">Settings</string>
    <string name="Settingss">Settings</string>
    <string name="SnackBarUpdate">Update available now, go to google play and update.</string>
    <string name="Start">Start</string>
    <string name="StringPDF">PDF Printing</string>
    <string name="Subtrack">Reduce</string>
    <string name="TextConectPrinter">Connect Printer</string>
    <string name="TextInstructions">Instructions</string>
    <string name="TextPolicy">Privacy Policy</string>
    <string name="TextPrinterSize">Select Printer size</string>
    <string name="TextSaveProduct">Enter the code, the name, the price of the product and press save, to edit and delete just select the product from the list and press the respective button.</string>
    <string name="TextViewLogo">Company logo</string>
    <string name="Text_printing">Text Printing</string>
    <string name="ToasNoMoroPrints">You have reached the maximum of 22 free prints for today</string>
    <string name="ToastCompletarCampos">You must complete all the fields</string>
    <string name="ToastCurrency">The currency has been saved successfully</string>
    <string name="ToastEditadoCorr">The product was modified correctly</string>
    <string name="ToastEnterText">you must enter some text first</string>
    <string name="ToastImageDeleted">Image Deleted Successfully</string>
    <string name="ToastImageSaved">Image Saved Successfully</string>
    <string name="ToastInternet">You need to be connected to the internet to use this application</string>
    <string name="ToastLodoNoLoaded">There is no company logo, go to settings and upload one</string>
    <string name="ToastMaximunProducts">You have reached the maximum limit of products in the free version,To continue delete a product or edit the existing ones.</string>
    <string name="ToastNameLoaded">The company name was modified correctly</string>
    <string name="ToastNeedCode">You must enter the product code</string>
    <string name="ToastNoData">you must enter some data to print</string>
    <string name="ToastNoExist">Product does not exist</string>
    <string name="ToastNoImage">you must select a picture</string>
    <string name="ToastNoProducts">Enter product data and press * Add *</string>
    <string name="ToastNoQR">you must generate a QR code first</string>
    <string name="ToastNoTextQR">You must enter text first to generate QR Codes</string>
    <string name="ToastPaidVersion">This functionality is only active in the paid version of this application..</string>
    <string name="ToastProductDeleted">Product removed successfully</string>
    <string name="ToastRegister">The registration was successful</string>
    <string name="ToastSelec">You must select a product and quantity</string>
    <string name="ToastSelect">You must select a product</string>
    <string name="ToastSelectPrinter">You must select a printer from settings</string>
    <string name="ToastThanks">Thanks for your purchase</string>
    <string name="ToastTurnOnPrinter">verify that the bluetooth printer is turned on</string>
    <string name="Total">Total:</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Unite_price">Unite Price:</string>
    <string name="Welcome">WELCOME</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="addProdu">Add Products</string>
    <string name="addProdu2">Add as many products as you want without limit</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Thermal printer</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="availableCre">Available Credits</string>
    <string name="avisoPrecio">Prices may vary according to the Google Play conversion rate. Click on Check prices to know the exact amount in your local currency.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buttonBluetoothSettings">1. OPEN BLUETOOTH SETIINGS</string>
    <string name="buttonClickHere">CLICK HERE</string>
    <string name="buttonDelete">DELETE</string>
    <string name="cancelSus">Cancel your subscription anytime you want.</string>
    <string name="lastUpdates">Get the latest updates</string>
    <string name="manageSusc">Manage Subscriptions</string>
    <string name="noAds">No ads</string>
    <string name="price">For only $1.99 USD / month</string>
    <string name="priceAnual">For only $19.99 USD / year</string>
    <string name="printOthers">PRINT</string>
    <string name="recibo">Customize your receipt</string>
    <string name="rewardVideo">Rewarded Videos</string>
    <string name="securePay">Secure Pay Directly with Google play</string>
    <string name="subscription">Subscriptions offers</string>
    <string name="suscripcionMensual">Available Subscriptions</string>
    <string name="textbox1">Enter the text you want to print...</string>
    <string name="unliPrints">Unlimited prints</string>
    <string name="unliProducts">Create unlimited products</string>
    <string name="verPrecio">SUBSCRIBE-Monthly</string>
    <string name="verPrecioAnual">SUBSCRIBE-Yearly</string>
    <string name="width">Width</string>
</resources>